<resources>
    <string name="app_name">ReklappClient</string>
    <string name="action_settings">Settings</string>
    <string name="signup_text">რეგისტრაცია</string>
    <string name="number_hint">მობილურის ნომერი</string>
    <string name="password_hint">პაროლი</string>
    <string name="login_button_text">ავტორიზაცია</string>
    <string name="name_hint">სახელი</string>
    <string name="surnname_hint">გვარი</string>
    <string name="email_hint">ელ. ფოსტა</string>
    <string name="country_text">საქართველო</string>
    <string name="address_hint">მისამართი</string>
    <string name="birth_date_hint">დაბადების თარიღი</string>
    <string name="number_of_children_hint">შვილების რაოდენობა</string>
    <string name="average_monthly_income_hint">თვიური საშუალო შემოსავალი ლარში</string>
    <string name="id_hint">პირადი ნომერი</string>
    <string name="registration_button_text">რეგისტრაცია</string>
    <string name="sign_in_text">ავტორიზაცია</string>
    <string name="player_error">მოხდა შეცდომა რეკლამის ჩართვისას</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="empty_field_error">ველი უნდა იყოს შევსებული</string>
    <string name="number_error">შეიყვანეთ მხოლოდ ციფრები</string>
    <string name="length_error">ველის სიგრძე უნდა იყოს </string>
    <string name="format_error">ფორმატი არასწორია</string>
    <string name="city_error">აირჩიეთ ქალაქი</string>
    <string name="relationship_error">აირჩიეთ ოჯახური მდგომარეობა</string>
    <string name="gender_error">აირჩიეთ სქესი</string>
    <string name="password_length_error">პაროლის სიგრძე უნდა იყოს მინიმუმ 6, მაქსიმუმ 20</string>
    <string name="success_status">Update completed.</string>
    <string name="transfer_success_status">Transfer completed.</string>
    <string name="country">საქართველო</string>
    <string name="preferences_key">com.example.ReklApp.PREFERENCE_FILE_KEY</string>
</resources>
