<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="@color/backgroundColor">

        <!-- logo goes 'ere -->
        <ImageView
            android:layout_marginTop="@dimen/logo_margin"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginBottom="@dimen/logo_margin"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:hint="@string/number_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/login_button_text"/>

        <TextView android:id="@+id/sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/signup_text"
            android:gravity="center"
            android:textSize="@dimen/sign_up_text_size"/>

    </LinearLayout>
</ScrollView>