<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/short_layout_padding_top"
        android:paddingLeft="@dimen/layout_padding_left"
        android:paddingRight="@dimen/layout_padding_right"
        android:background="@color/backgroundColor">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/surnname_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:hint="@string/number_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/pid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:hint="@string/id_hint" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/address_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sex_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/birth_date_hint"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/relationship_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/numChildren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/number_of_children_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin">
            <android.support.design.widget.TextInputEditText android:id="@+id/income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/average_monthly_income_hint" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="შენახვა"
                android:layout_weight="1"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="გაუქმება"
                android:layout_weight="1"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>